# ComputerVisionProjects

./: README.md
Project1/: CMakeLists.txt  Project1.cpp  buildinfo.cpp  facedetect.cpp  test.cpp
